fix: delete overflow-y: hidden;

--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -2,10 +2,7 @@
 @import 'typography';
 
 html {
-  overflow-y: hidden;
-
   box-sizing: border-box;
-
   font-size: 100%;
 
   -webkit-font-smoothing: antialiased;
